{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 23,
  "lineage": "9af7e0fd-bd55-1bdc-4ade-dce25a4a057a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00e16d04582fc1245",
            "public_dns": "ec2-54-254-2-232.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.2.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:internet-gateway/igw-08fe5b4e880081453",
            "id": "igw-08fe5b4e880081453",
            "owner_id": "022598194260",
            "tags": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e16d04582fc1245",
            "id": "nat-0a1ef974ebddfa913",
            "network_interface_id": "eni-0e120facae03c38ea",
            "private_ip": "10.0.8.83",
            "public_ip": "54.254.2.232",
            "subnet_id": "subnet-00f0d48db438803d3",
            "tags": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ba50b1e9dff2fd2",
            "owner_id": "022598194260",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a1ef974ebddfa913",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-rt"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e4a55e560e579884",
            "owner_id": "022598194260",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fe5b4e880081453",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-rt"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f05dfbb30d5e560e",
            "route_table_id": "rtb-02ba50b1e9dff2fd2",
            "subnet_id": "subnet-029126c98a73ab7eb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c10849e7120ad7",
            "route_table_id": "rtb-02ba50b1e9dff2fd2",
            "subnet_id": "subnet-0a2288d13f788dce7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet2",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb5ad2b66d510fe",
            "route_table_id": "rtb-02ba50b1e9dff2fd2",
            "subnet_id": "subnet-0c468bd18d0403d5c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet5",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4d81f1bd944d2e6",
            "route_table_id": "rtb-02ba50b1e9dff2fd2",
            "subnet_id": "subnet-096ec50d51f74d0af"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet6",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2955e4c89f339aa",
            "route_table_id": "rtb-0e4a55e560e579884",
            "subnet_id": "subnet-0f938e8f62defed54"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f69aad347411c429",
            "route_table_id": "rtb-0e4a55e560e579884",
            "subnet_id": "subnet-06c79030be33dbd32"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196129b59bac5615",
            "route_table_id": "rtb-0e4a55e560e579884",
            "subnet_id": "subnet-09dd2a92412e2832f"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet7",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059103218f7106fc3",
            "route_table_id": "rtb-0e4a55e560e579884",
            "subnet_id": "subnet-00f0d48db438803d3"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-029126c98a73ab7eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-029126c98a73ab7eb",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "app-subnet-1"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-0a2288d13f788dce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a2288d13f788dce7",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "app-subnet-2"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-0f938e8f62defed54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f938e8f62defed54",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "elb-subnet-1"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-06c79030be33dbd32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06c79030be33dbd32",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "elb-subnet-2"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-0c468bd18d0403d5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c468bd18d0403d5c",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-096ec50d51f74d0af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-096ec50d51f74d0af",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-09dd2a92412e2832f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-09dd2a92412e2832f",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "nat-subnet-1"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:subnet/subnet-00f0d48db438803d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-00f0d48db438803d3",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "nat-subnet-2"
            },
            "vpc_id": "vpc-0bd3913a2a0f07409"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022598194260:vpc/vpc-0bd3913a2a0f07409",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04226db6844b96987",
            "default_route_table_id": "rtb-02ad1b2e2d166d796",
            "default_security_group_id": "sg-0bad09a2a445423f0",
            "dhcp_options_id": "dopt-61ebf206",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd3913a2a0f07409",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02ad1b2e2d166d796",
            "owner_id": "022598194260",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}